--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "axios": "^1.1.3",
     "ethers": "^5.7.2",
     "solc": "^0.8.17"
   }
