--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "solc": "^0.8.17"
   }
